test: incluir testes unitários na classe Book